* Solr request performance is instrumented in Rails (Paco Guzmán)
* Reindexing tasks display a progress bar if `progress_bar` gem is available (Paul Carey)
* Deprecated Rails syntax is removed from `Sunspot::Rails::Searchable` (Steve Schwartz)
* Deprecated syntax is removed from rake tasks (Huned Botee)
* `sunspot:reindex` rake task correctly handles namespaced models (João Gradim)

== 1.2.1 2010-12-28
* Decreased default reindexing batch size from 500 to 50

== 1.2.0 2010-12-28
* Compatible with both Rails 2 and Rails 3
* Configure Sunspot with a SOLR_URL or WEBSOLR_URL environment variable, also
  provide a default port based on Rails.env.
* Fix the 'Anonymous modules' ArgumentError for Ruby 1.9.2 and Rails 2.3
* Fix SQL's ambiguous ID issue when tables are joined

== 1.1.0 2010-04-01
* Added include option to searchable options to allow definition of eager
  loading associations when indexing

== 1.0.4 2010-03-19
* Fix StubSessionProxy to match new internal API

== 1.0.2 2010-03-11
* Allow use of ActiveRecord object for coordinates extraction
* Works with non-standard primary keys
* Add :include, :select options to Searchable::search()
* Allow specification of min_memory and max_memory in config/sunspot.yml
* Searchable now more considerate of model namespaces

== 1.0.1 2010-03-05
* Fix Solr logging compatibility with RSolr 0.12.1

== 1.0.0 2010-03-03
* Sunspot::Rails::Server subclasses Sunspot::Server; no longer needs to shell out
* Use Sunspot built-in session proxies in Sunspot::Rails
* Sunspot::Rails adapter compatible with assumed inconsistency
* Use session proxy for disconnecting Sunspot in specs
* Allow specification of first ID for reindex batches.
* Log Solr requests in Rails logger
* Use class_inheritable_hash for sunspot_options
* Add `index` class method, which is like `reindex` but doesn't clear first
* Rename sunspot:solr:reindex to sunspot:reindex
* Use Sunspot::Installer to bootstrap Rails Solr home

== 0.10.7