@@ -67,6 +67,10 @@ describe Sunspot::Rails::Configuration, "default values without a sunspot.yml" d
   it "should handle the 'auto_commit_after_delete_request' propery when not set" do
     @config.auto_commit_after_delete_request?.should == false
   end
+
+  it "should handle the 'bind_address' property when not set" do
+    @config.bind_address.should be_nil
+  end
 end
 
 describe Sunspot::Rails::Configuration, "user provided sunspot.yml" do
@@ -113,6 +117,10 @@ describe Sunspot::Rails::Configuration, "user provided sunspot.yml" do
   
   it "should handle the 'auto_commit_after_delete_request' propery when set" do
     @config.auto_commit_after_delete_request?.should == true
+  end
+
+  it "should handle the 'bind_address' property when set" do
+    @config.bind_address.should == "127.0.0.1"
   end
 end
 
