@@ -22,6 +22,10 @@ OptionParser.new do |opts|
     server.port = p
   end
 
+  opts.on '-b', '--bind-address=address', 'Interface on which to run Solr (default 0.0.0.0)' do |b|
+    server.bind_address = b
+  end
+
   opts.on '-d', '--data-directory=DIRECTORY', 'Solr data directory' do |d|
     server.solr_data_dir = File.expand_path(d)
   end
