@@ -5,6 +5,8 @@
 * Deprecated Rails syntax is removed from `Sunspot::Rails::Searchable` (Steve Schwartz)
 * Deprecated syntax is removed from rake tasks (Huned Botee)
 * `sunspot:reindex` rake task correctly handles namespaced models (João Gradim)
+* `bind_address` parameter can be specified in `sunspot.yml` to bind Solr to a
+  specific interface (Sylvain Utard)
 
 == 1.2.1 2010-12-28
 * Decreased default reindexing batch size from 500 to 50
